objects/Opportunity.object
<CustomObject><businessProcesses>
<fields>
        <fullName>Training_Revenue_User_Currency__c</fullName>
        <description>Amount converted to the running user currency</description>
        <formula>Training_Revenue__c/ Currency_to_Corp__c * CASE($User.User_Currency__c ,"GBP", $Setup.Mathworks_Exchange_Rates__c.GBP_to_Corporate__c ,"AUD",$Setup.Mathworks_Exchange_Rates__c.AUD_to_Corporate__c,"CHF", $Setup.Mathworks_Exchange_Rates__c.CHF_To_Corporate__c,
"CNY", $Setup.Mathworks_Exchange_Rates__c.CNY_to_Corporate__c ,"DKK", $Setup.Mathworks_Exchange_Rates__c.DKK_To_Corporate__c ,"EUR", $Setup.Mathworks_Exchange_Rates__c.EUR_to_Corporate__c ,"INR", $Setup.Mathworks_Exchange_Rates__c.INR_To_Corporate__c ,
"JPY", $Setup.Mathworks_Exchange_Rates__c.JPY_To_Corporate__c ,"KRW", $Setup.Mathworks_Exchange_Rates__c.KRW_To_Corporate__c ,"NOK", $Setup.Mathworks_Exchange_Rates__c.NOK_To_Corporate__c ,"NZD", $Setup.Mathworks_Exchange_Rates__c.NZD_To_Corporate__c ,"SEK", $Setup.Mathworks_Exchange_Rates__c.SEK_To_Corporate__c ,"USD", 
$Setup.Mathworks_Exchange_Rates__c.USD_to_Corporate__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Revenue (User Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Training_Revenue__c</fullName>
        <description>Summary field of opportunity products with revenue class of Training</description>
        <label>Training Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Revenue_Class__c</field>
            <operation>equals</operation>
            <value>Training</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>USD_Amount__c</fullName>
        <description>calculated field  that converts the total opportunity amount to USD</description>
        <label>USD Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>USD_Exchange_Rate__c</fullName>
        <label>USD Exchange Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ortoo_e2a__Thread_Id__c</fullName>
        <formula>"ref:"&amp;
LEFT( $Organization.Id , 4 )&amp;
IF( BEGINS(RIGHT($Organization.Id,11), '0000000'), RIGHT($Organization.Id,4),
IF( BEGINS(RIGHT($Organization.Id,11), '000000'), RIGHT($Organization.Id,5),
IF( BEGINS(RIGHT($Organization.Id,11), '00000'), RIGHT($Organization.Id,6),
IF( BEGINS(RIGHT($Organization.Id,11), '0000'), RIGHT($Organization.Id,7),
IF( BEGINS(RIGHT($Organization.Id,11), '000'), RIGHT($Organization.Id,8),
IF( BEGINS(RIGHT($Organization.Id,11), '00'), RIGHT($Organization.Id,9),
IF( BEGINS(RIGHT($Organization.Id,11), '0'), RIGHT($Organization.Id,10), 
RIGHT($Organization.Id,11)
)))))))
&amp;"."&amp;LEFT( Id , 4 )&amp;

IF(BEGINS(RIGHT(Id,11), '0000000'), RIGHT(Id,4),
IF(BEGINS(RIGHT(Id,11), '000000'), RIGHT(Id,5),
IF(BEGINS(RIGHT(Id,11), '00000'), RIGHT(Id,6),
IF(BEGINS(RIGHT(Id,11), '0000'), RIGHT(Id,7),
IF(BEGINS(RIGHT(Id,11), '000'), RIGHT(Id,8),
IF(BEGINS(RIGHT(Id,11), '00'), RIGHT(Id,9),
IF(BEGINS(RIGHT(Id,11), '0'), RIGHT(Id,10),
RIGHT(Id,11)
))))))) &amp;":ref"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>Private</externalSharingModel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AMB_Opportunity_Query_No_Territory</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Territory_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>SMS__c</columns>
        <columns>Territory_Team_Role__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>OPPORTUNITY.CURRENCY_ISO_CODE</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <label>AMB Opportunity Query No Territory</label>
        <language>en_US</language>
        <sharedTo />
    </listViews><listViews>
        <fullName>AMB_Opportunity_Query_To_Be_Locked</fullName>
        <columns>Locked__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Territory_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>SMS__c</columns>
        <columns>Territory_Team_Role__c</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>OPPORTUNITY.CURRENCY_ISO_CODE</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>USD_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Salesforce_Opportunity_ID__c</field>
            <operation>equals</operation>
            <value>0063100000cCgVrAAK</value>
        </filters>
        <label>AMB Opportunity Query To Be Locked</label>
        <language>en_US</language>
        <sharedTo />
    </listViews><listViews>
        <fullName>EMEA_Direct_Sales_01_Active_E_Opps</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>Age_Days__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>Territory_Name__c</field>
            <operation>equals</operation>
            <value>EMEA-DIRECT-EDU 01</value>
        </filters>
        <label>* EMEA Direct Sales 01 Active ALL Opps</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>EMEA_EDU_Sales_Manager_Ronald_van_de_Pol</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>EMEA_Direct_Sales_01_Active_E_Opps1</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>Age_Days__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>E - Suspect</value>
        </filters>
        <filters>
            <field>Territory_Name__c</field>
            <operation>equals</operation>
            <value>EMEA-DIRECT-EDU 01</value>
        </filters>
        <label>* EMEA Direct Sales 01 Active E Opps</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>EMEA_EDU_Sales_Manager_Ronald_van_de_Pol</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>IN_E_G_EDU_Overlay_3</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>Age_Days__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory_Name__c</field>
            <operation>equals</operation>
            <value>IN-E-G-EDU Overlay 3,IN-E-N-EDU Overlay 9</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>IN-E-G-EDU Overlay 3</label>
        <language>en_US</language>
        <sharedTo>
            <role>IN_Sales_Rep_Report_Jayant_Bhadauria</role>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_ActiveAll</fullName>
        <booleanFilter>1 AND 2 and (3 or 4)</booleanFilter>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Salesforce_Opportunity_ID__c</columns>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>lessThan</operation>
            <value>USD 1</value>
        </filters>
        <filters>
            <field>Primary_Purpose__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>equals</operation>
        </filters>
        <label>* Opps No Revenue</label>
        <sharedTo />
    </listViews><listViews>
        <fullName>My_Active_All46</fullName>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>Age_Days__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Active All</label>
    </listViews><listViews>
        <fullName>My_Active_All65</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>Age_Days__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory_Name__c</field>
            <operation>equals</operation>
            <value>IN-E-N-EDU Overlay 2,IN-E-G-EDU Overlay 8</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>IN-E-N-EDU Overlay 2</label>
        <language>en_US</language>
        <sharedTo>
            <role>IN_Sales_Rep_Report_Jayant_Bhadauria</role>
        </sharedTo>
    </listViews><listViews>
        <fullName>My_ClosingNextMonth</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>My Closing Next Month</label>
    </listViews><listViews>
        <fullName>My_ClosngThisMonth</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>My Closing This Month</label>
    </listViews><listViews>
        <fullName>My_Due_Future_new</fullName>
        <booleanFilter>((1 AND 2) OR (3 And 4))</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Due Future</label>
    </listViews><listViews>
        <fullName>My_Due_Past_new</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>Age_Days__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>My Due Past</label>
    </listViews><listViews>
        <fullName>My_Due_Today_new</fullName>
        <booleanFilter>(1 AND (2 OR 5)) OR (3 AND 4)</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Due Today</label>
    </listViews><listViews>
        <fullName>My_Due_Today_or_Past_Due</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>Age_Days__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <label>My Due Today or Past Due Active Opps</label>
    </listViews><listViews>
        <fullName>My_Due_Today_or_Past_new</fullName>
        <booleanFilter>((1 or 2) and 3) or (4 and 5)</booleanFilter>
        <columns>Next_Activity_Due_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Age_Days__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Territory__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Primary_Purpose__c</columns>
        <columns>Call_Attempts__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Win,Non-Win</value>
        </filters>
        <filters>
            <field>Next_Activity_Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>My Due Today or Past</label>
        <language>en_US</language>
    </listViews><validationRules>
        <fullName>Cant_change_stage_on_closed_opportunity</fullName>
        <active>true</active>
        <description>This validation rule will prevent from changing opportunity stage if the opportunity is closed and was closed more than 90 days ago.</description>
        <errorConditionFormula>AND(
    PRIORVALUE(IsClosed)
    ,ISCHANGED(StageName)
    ,OR((System_Close_Date__c &lt; DATETIMEVALUE(TODAY() - 90)),( ISNULL( System_Close_Date__c ) ))
    ,$Setup.Opportunity_Validation_Rule_Settings__c.Cant_change_stage_on_closed_opportunity__c 
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Stage can only be changed for a non-win if it was closed within the past 90 days</errorMessage>
    </validationRules><validationRules>
        <fullName>Cant_change_stage_on_won_opportunity</fullName>
        <active>true</active>
        <description>Stage can be changed for a won opportunity if the Opportunity Close date is within 30 days of the current date.</description>
        <errorConditionFormula>AND(
PRIORVALUE(IsWon)
,ISCHANGED(StageName)
,OR((System_Close_Date__c &lt; DATETIMEVALUE(TODAY()-30)), (ISNULL(System_Close_Date__c)))
,$Setup.Opportunity_Validation_Rule_Settings__c.Cant_change_stage_on_closed_opportunity__c 
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Stage can only be changed for a Win if it was closed within the past 30 days</errorMessage>
    </validationRules><validationRules>
        <fullName>CloseDate_Rule</fullName>
        <active>true</active>
        <description>Close date must not be equal to 1/1/2099 when Stage has a value of 'C - Evaluation' or 'B - Decision Due' or 'A - Pending Sale' or 'Win'</description>
        <errorConditionFormula>AND( 
    OR(
        ISPICKVAL(StageName , 'C - Evaluation')
        ,ISPICKVAL(StageName , 'B - Decision Due')
        ,ISPICKVAL(StageName , 'A - Pending Sale')
        ,ISPICKVAL(StageName , 'Win')
    )
    ,CloseDate = $Setup.General_Settings__c.Opportunity_Close_Date__c 
    ,$Setup.Opportunity_Validation_Rule_Settings__c.CloseDate_Rule__c  
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Close Date must not be equal to 1/1/2099</errorMessage>
    </validationRules><validationRules>
        <fullName>Existing_Opportunity_Lookup_Rule</fullName>
        <active>true</active>
        <description>Requires a user to set a value to the existing opportunity field if the reason is chosen as 'Existing Opportunity</description>
        <errorConditionFormula>AND(
ISPICKVAL( Reason__c, 'Existing Opportunity' ),
ISBLANK( Existing_Opportunity__c )
)</errorConditionFormula>
        <errorDisplayField>Existing_Opportunity__c</errorDisplayField>
        <errorMessage>Existing Opportunity is required</errorMessage>
    </validationRules><validationRules>
        <fullName>NonWin_Rule</fullName>
        <active>true</active>
        <description>Requires the user to select a value in the Reason field if the value of the stageName value is 'Non-Win'</description>
        <errorConditionFormula>AND(
         ISPICKVAL(StageName , 'Non-Win'),
         ISBLANK(TEXT( Reason__c ))
   )</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Select a value in Reason field</errorMessage>
    </validationRules><validationRules>
        <fullName>Opport_Not_Allowed_Individual_Account</fullName>
        <active>true</active>
        <description>Prevent Users from saving Opportunities For Individual Accounts</description>
        <errorConditionFormula>Account.Is_Individual_Account__c =true</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Opportunities must be associated to a valid business account</errorMessage>
    </validationRules><validationRules>
        <fullName>Opportunity_Description_Length</fullName>
        <active>true</active>
        <description>Opportunity summary can't be more than 500 characters when new opportunity is created or summary field is changed on the existing opportunity</description>
        <errorConditionFormula>OR( AND(ISNEW(), LEN( Description )&gt; 500), AND( ISCHANGED(Description), LEN( Description )&gt; 500 ) )</errorConditionFormula>
        <errorMessage>Opportunity Summary field length exceeded. Please limit your summary to 500 characters.</errorMessage>
    </validationRules><validationRules>
        <fullName>Opportunity_Primary_Purpose_Lookup_Rule</fullName>
        <active>true</active>
        <description>Requires the user to set value for Opportunity Primary Purpose field when Stage Name = "C - Evaluation" or 'B - Decision Due' or 'A - Pending Sale' or 'Win'</description>
        <errorConditionFormula>AND( 
    OR(
        ISPICKVAL(StageName , 'C - Evaluation')
        ,ISPICKVAL(StageName , 'B - Decision Due')
        ,ISPICKVAL(StageName , 'A - Pending Sale')
        ,ISPICKVAL(StageName , 'Win')
    )
    ,ISBLANK(TEXT(Primary_Purpose__c))
    ,$Setup.Opportunity_Validation_Rule_Settings__c.Opportunity_Primary_Purpose_Lookup_Rule__c 
)</errorConditionFormula>
        <errorDisplayField>Primary_Purpose__c</errorDisplayField>
        <errorMessage>Opportunity Primary Purpose is required</errorMessage>
    </validationRules><validationRules>
        <fullName>Prevent_Update_PrimaryCampaign</fullName>
        <active>true</active>
        <description>When Opportunity is converted from a Lead, prevent the update of the Primary Campaign.
Added Not ISNEW() so the validation rule will not prevent an opportunity from being created when the Lead conversion has the primary campaign set.</description>
        <errorConditionFormula>AND (
      ISNEW() = false
         ,ISBLANK(Salesforce_Lead_ID__c)  = false
           ,ISBLANK(PRIORVALUE(CampaignId))= false
            ,ISCHANGED( CampaignId ) = true
               ,NOT ($Permission.Allow_Employee_Data_changes)
    )</errorConditionFormula>
        <errorDisplayField>CampaignId</errorDisplayField>
        <errorMessage>The Primary Campaign Source cannot be changed on an Opportunity created from a Lead. Additional campaigns can be added to the Campaign Influence list only.</errorMessage>
    </validationRules><validationRules>
        <fullName>RevenueAmount_Rule</fullName>
        <active>true</active>
        <description>When Stage = "C - Evaluation" OR 'B - Decision Due' OR 'A - Pending Sale' OR 'Win' is selected the Revenue amount must be populated AND &gt; 0</description>
        <errorConditionFormula>AND( 
    OR(
        ISPICKVAL(StageName , 'C - Evaluation')
        ,ISPICKVAL(StageName , 'B - Decision Due')
        ,ISPICKVAL(StageName , 'A - Pending Sale')
        ,ISPICKVAL(StageName , 'Win')
    )
    ,OR(
        ISBLANK(Amount)
        ,Amount  &lt;= 0
    )
    ,$Setup.Opportunity_Validation_Rule_Settings__c.RevenueAmount_Rule__c 
)</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Opportunity Amount must be populated and must be greater than 0</errorMessage>
    </validationRules><validationRules>
        <fullName>Valid_Master_License_Id</fullName>
        <active>true</active>
        <description>Master license id must be number</description>
        <errorConditionFormula>AND(NOT (ISNUMBER( Master_License_Id__c )), NOT ISBLANK(Master_License_Id__c) )</errorConditionFormula>
        <errorDisplayField>Master_License_Id__c</errorDisplayField>
        <errorMessage>Master License  # is invalid. Must be number.</errorMessage>
    </validationRules></CustomObject>